fix: fix inbound operation bugs.